k9s/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kanban-postgres
  template:
    metadata:
      labels:
        app: kanban-postgres
    spec:
      restartPolicy: Always  # Ensures the pod restarts on failure
      containers:
        - name: kanban-postgres
          image: postgres:9.6-alpine
          ports:
            - containerPort: 5432
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-app
  namespace: default
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kanban-app
  template:
    metadata:
      labels:
        app: kanban-app
    spec:
      containers:
        - name: kanban-app
          image: nandini965/kanban-app:latest
          ports:
            - containerPort: 8080
              protocol: TCP

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kanban-ui
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kanban-ui
  template:
    metadata:
      labels:
        app: kanban-ui
    spec:
      containers:
        - name: kanban-ui
          image: nandini965/kanban-ui:latest
          ports:
            - containerPort: 80
