k9s/manifests/service.yaml
# kanban-ui Service
apiVersion: v1
kind: Service
metadata:
  name: kanban-ui
spec:
  type: LoadBalancer
  ports:
    - port: 80git
      targetPort: 80
      nodePort: 30080  # Optional: Define a fixed NodePort
  selector:
    app: kanban-ui
---
apiVersion: v1
kind: Service
metadata:
  name: kanban-app
spec:
  selector:
    app: kanban-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: kanban-postgres
spec:
  selector:
    app: kanban-postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
